--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 
 <p>［本を読むこと］</p>
 
-<h3>
+<h１>
 <a id="将来の夢" class="anchor" href="#%E5%B0%86%E6%9D%A5%E3%81%AE%E5%A4%A2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>将来の夢</h3>
 
 <p>[医者]</p>
 
-<h3>
+<h４>
 <a id="いまの目標" class="anchor" href="#%E3%81%84%E3%81%BE%E3%81%AE%E7%9B%AE%E6%A8%99" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>いまの目標</h3>
 
 <p>[第一志望校合格]</p>
@@ -62,7 +62,7 @@
 <h3>
 <a id="おとうさんおかあさんへ一言" class="anchor" href="#%E3%81%8A%E3%81%A8%E3%81%86%E3%81%95%E3%82%93%E3%81%8A%E3%81%8B%E3%81%82%E3%81%95%E3%82%93%E3%81%B8%E4%B8%80%E8%A8%80" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>おとうさん・おかあさんへ一言</h3>
 
-<p>[ITサマーキャンプ頑張ってます]</p>
+<p>[ITサマーキャンプ頑張ってます。]</p>
 
 <h3>
 <a id="世界のひとびとへのメッセージ" class="anchor" href="#%E4%B8%96%E7%95%8C%E3%81%AE%E3%81%B2%E3%81%A8%E3%81%B3%E3%81%A8%E3%81%B8%E3%81%AE%E3%83%A1%E3%83%83%E3%82%BB%E3%83%BC%E3%82%B8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>世界のひとびとへのメッセージ</h3>
