--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
 <img src=”web/images/larva 2.jpg” width=”900” height=”630“>
 
 
-<p>［ぼくは、 本をよむことがすきなので本についての歴史を調べました。
+<p>［ぼくは、 本をよむことがすきなので本についての歴史を調べました。<br>
 本…西暦８００年頃に、中国で版木にインクをおしつけるすりかたが開発されました。そのあと、ドイツ人の、グーテンベルクが活字印刷を開発しました。皆さんも是非見てみてください。
-ぼくは、さらにlarvaというアニメがすきで筆箱までもってます。
-このアニメのおもしろいところは言葉を使わないので、世界中誰でも楽しめるところです。
-少し、げひんなところもありますがものすごくおもしろいので是非見てみてください。
-ぼくは、さらにが焼き鮭すきです。
-クッキングシートをフライパンに敷き、鮭を乗せる。
+ぼくは、さらにlarvaというアニメがすきで筆箱までもってます。<br>
+このアニメのおもしろいところは言葉を使わないので、世界中誰でも楽しめるところです。<br>
+少し、げひんなところもありますがものすごくおもしろいので是非見てみてください。<br>
+ぼくは、さらにが焼き鮭すきです。<br>
+クッキングシートをフライパンに敷き、鮭を乗せる。<br>
 中火で２分焼き付け、弱火にして蓋をし、上の面が白くなるまで待つ。（だいたい３〜４分位。）白くなったら蓋をとって強火にし、裏に焦げ目がつくまで焼き付ける。
-ひっくり返し、中火〜強火で２分ほど焼いてレモンをかけて、完成。
-なぜぼくが焼き鮭をすきなのかというと、香ばしいからです。
+ひっくり返し、中火〜強火で２分ほど焼いてレモンをかけて、完成。<br>
+なぜぼくが焼き鮭をすきなのかというと、香ばしいからです。<br>
 知ってほしいこと…サケは程よく油がのったクセのない身をもち、加熱すると独特の食感があらわれる。それらの特徴を引き立たせる様々な料理があります。
 サケの身は赤いが、生物学的には体側筋が遅筋から成る赤身魚ではなく、速筋から成る白身魚に分類される。サケの赤色は遅筋の色の原因である酸素結合性タンパク質、ミオグロビンによるものではなく、餌として摂取された甲殻類の外殻に含まれるカテロイドであるアスタキサンチンによる。このアスタキサンチンは抗酸化作用などが注目されていて、多くのサプリメントや健康食品に利用されているそうです。
 
