--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 ひっくり返し、中火〜強火で２分ほど焼いてレモンをかけて、完成。<br>
 なぜぼくが焼き鮭をすきなのかというと、香ばしいからです。<br>
 知ってほしいこと…サケは程よく油がのったクセのない身をもち、加熱すると独特の食感があらわれる。それらの特徴を引き立たせる様々な料理があります。
-サケの身は赤いが、生物学的には体側筋が遅筋から成る赤身魚ではなく、速筋から成る白身魚に分類される。サケの赤色は遅筋の色の原因である酸素結合性タンパク質、ミオグロビンによるものではなく、餌として摂取された甲殻類の外殻に含まれるカテロイドであるアスタキサンチンによる。このアスタキサンチンは抗酸化作用などが注目されていて、多くのサプリメントや健康食品に利用されているそうです。
-
+サケの身は赤いが、生物学的には体側筋が遅筋から成る赤身魚ではなく、速筋から成る白身魚に分類される。サケの赤色は遅筋である酸素結合性タンパク質、ミオグロビンによるものではなく、餌として摂取された甲殻類の外殻に含まれるカテロイドであるアスタキサンチンによる。このアスタキサンチンは抗酸化作用などが注目されていて、多くのサプリメントや健康食品に利用されているそうです。
+の色の原因
 ぼくは、焼き鮭をたべることがすきですでも、世界ではかんずめにつめてあるのがすきなひともいます。みなさんはどちらがすきですか?］</p>
 
 <h3>
