--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
 <p>［ぼくは、 本をよむことがすきなので本についての歴史を調べました。<br>
-本…西暦８００年頃に、中国で版木にインクをおしつけるすりかたが開発されました。そのあと、ドイツ人の、グーテンベルクが、活字印刷を開発しました。<br>
+本…西暦８００年頃に、中国で版木にインクをおしつけるすりかたが開発されました。<FONT color="#800080">そのあと、ドイツ人の、グーテンベルクが、活字印刷を開発しました。</FONT ><br>
 <FONT color="#00ffff">ぼくは、さらにlarvaというアニメがすきで筆箱までもってます。</FONT><br>
 このアニメのおもしろいところは言葉を使わないので、世界中誰でも楽しめるところです。<br>
 少し、げひんなところもありますがものすごくおもしろいので是非見てみてください。<br>
