--- a/index.html
+++ b/index.html
@@ -49,17 +49,18 @@
 <img src=”web/images/larva 2.jpg” width=”900” height=”630“>
 
 
-<p><FONT color="#ff0000">［ぼくは、 本をよむことがすきなので本についての歴史を調べました。</FONT ><br>
-本…西暦８００年頃に、中国で版木にインクをおしつけるすりかたが開発されました。<FONT color="#800080">そのあと、ドイツ人の、グーテンベルクが、活字印刷を開発しました。</FONT ><br>
+<p><FONT color="#ff0000">ぼくは、 本をよむことがすきなので本についての歴史を調べました。</FONT ><br>
+<FONT color="#0000ff">本…西暦８００年頃に、中国で版木にインクをおしつけるすりかたが開発されました.</FONT >
+<FONT color="#008000">そのあと、ドイツ人の、グーテンベルクが、活字印刷を開発しました。</FONT ><br>
 <FONT color="#00ffff">ぼくは、さらにlarvaというアニメがすきで筆箱までもってます。</FONT><br>
-このアニメのおもしろいところは言葉を使わないので、世界中誰でも楽しめるところです。<br>
-少し、げひんなところもありますがものすごくおもしろいので是非見てみてください。<br>
-ぼくは、さらにが焼き鮭すきです。<br>
-クッキングシートをフライパンに敷き、鮭を乗せる。<br>
-中火で２分焼き付け、弱火にして蓋をし、上の面が白くなるまで待つ。（だいたい３〜４分位。）白くなったら蓋をとって強火にし、裏に焦げ目がつくまで焼き付ける。
-ひっくり返し、中火〜強火で２分ほど焼いてレモンをかけて、完成。<br>
-なぜぼくが焼き鮭をすきなのかというと、香ばしいからです。<br>
-知ってほしいこと…サケは程よく油がのったクセのない身をもち、加熱すると独特の食感があらわれる。それらの特徴を引き立たせる様々な料理があります。
+<FONT color="#ffff00">このアニメのおもしろいところは言葉を使わないので、世界中誰でも楽しめるところです。</FONT ><br>
+<FONT color="#c0c0c0">少し、げひんなところもありますがものすごくおもしろいので是非見てみてください。</FONT ><br>
+<FONT color="#ff00ff">ぼくは、さらにが焼き鮭すきです。</FONT ><br>
+<FONT color="#00ff00">クッキングシートをフライパンに敷き、鮭を乗せる。</FONT ><br>
+<FONT color="#000080">中火で２分焼き付け、弱火にして蓋をし、上の面が白くなるまで待つ。（だいたい３〜４分位。）白くなったら蓋をとって強火にし、裏に焦げ目がつくまで焼き付ける。
+ひっくり返し、中火〜強火で２分ほど焼いてレモンをかけて、完成。</FONT ><br>
+<FONT color="#800080">なぜぼくが焼き鮭をすきなのかというと、香ばしいからです。</FONT ><br>
+<FONT color="#808000">知ってほしいこと…サケは程よく油がのったクセのない身をもち、加熱すると独特の食感があらわれる。それらの特徴を引き立たせる様々な料理があります。</FONT >
 サケの身は赤いが、生物学的には体側筋が遅筋から成る赤身魚ではなく、速筋から成る白身魚に分類される。サケの赤色は遅筋である酸素結合性タンパク質、ミオグロビンによるものではなく、餌として摂取された甲殻類の外殻に含まれるカテロイドであるアスタキサンチンによる。このアスタキサンチンは抗酸化作用などが注目されていて、多くのサプリメントや健康食品に利用されているそうです。
 ぼくは、焼き鮭をたべることがすきですでも、世界ではかんずめにつめてあるのがすきなひともいます。みなさんはどちらがすきですか?］</p>
 
