--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <FONT color="#0000ff">本…西暦８００年頃に、中国で版木にインクをおしつけるすりかたが開発されました.</FONT >
 <FONT color="#008000">そのあと、ドイツ人の、グーテンベルクが、活字印刷を開発しました。</FONT ><br>
 <FONT color="#00ffff">ぼくは、さらにlarvaというアニメがすきで筆箱までもってます。</FONT><br>
-<FONT color="#ffff00">このアニメのおもしろいところは言葉を使わないので、世界中誰でも楽しめるところです。</FONT ><br>
+<FONT color="#000080">このアニメのおもしろいところは言葉を使わないので、世界中誰でも楽しめるところです。</FONT ><br>
 <FONT color="#c0c0c0">少し、げひんなところもありますがものすごくおもしろいので是非見てみてください。</FONT ><br>
 <FONT color="#ff00ff">ぼくは、さらにが焼き鮭すきです。</FONT ><br>
 <FONT color="#00ff00">クッキングシートをフライパンに敷き、鮭を乗せる。</FONT ><br>
@@ -77,10 +77,29 @@
 <h3>
 <a id="おとうさんおかあさんへ一言" class="anchor" href="#%E3%81%8A%E3%81%A8%E3%81%86%E3%81%95%E3%82%93%E3%81%8A%E3%81%8B%E3%81%82%E3%81%95%E3%82%93%E3%81%B8%E4%B8%80%E8%A8%80" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>おとうさん・おかあさんへ一言</h3>
 
-<p>[ITサマーキャンプ頑張ってます。]</p>
+<p>[ITサマーキャンプ頑張ってます。
 
 <h3>
 <a id="世界のひとびとへのメッセージ" class="anchor" href="#%E4%B8%96%E7%95%8C%E3%81%AE%E3%81%B2%E3%81%A8%E3%81%B3%E3%81%A8%E3%81%B8%E3%81%AE%E3%83%A1%E3%83%83%E3%82%BB%E3%83%BC%E3%82%B8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>世界のひとびとへのメッセージ</h3>
+<h2> 学んだこと </h2>   
+<h3>   超社会脳：国際統計と世界情勢<br></h3>
+<p>コンピューターを用いて社会について知ること・学ぶことができることを学びました。</p>
+    <div class="images">
+  <img src="web/images/img001" />
+</div>
+<h4>    超理科脳：脳画像と計算論的神経科学<br></h3>
+<p>ひとやいきものの脳を安全に観察・診察するための方法にも、コンピューターが役立っていることを学びました。</p>
+<div class="images">
+  <img src="web/images/img002" />
+</div>
+<h4>    超算数脳：フラクタルとアトラクター<br></h3>
+<p>かめが歩いた「あしあと」が描く図形、「タートルグラフィックス」を学び、フラクタルとアトラクターを作りました。</p>
+<div class="images">
+  <img src="web/images/img003" />
+</div>
+
+<!doctype html>
+<html>
 
 <p>[２０２０年東京オリンピック楽しみですね、皆さん是非来てください]</p>
       </section>
