--- a/index.html
+++ b/index.html
@@ -85,17 +85,17 @@
 <h3>   超社会脳：国際統計と世界情勢<br></h3>
 <p>コンピューターを用いて社会について知ること・学ぶことができることを学びました。</p>
     <div class="images">
-  <img src="web/images/img001" />
+  <img src="web/img001" />
 </div>
 <h4>    超理科脳：脳画像と計算論的神経科学<br></h3>
 <p>ひとやいきものの脳を安全に観察・診察するための方法にも、コンピューターが役立っていることを学びました。</p>
 <div class="images">
-  <img src="web/images/img002" />
+  <img src="web/img002" />
 </div>
 <h4>    超算数脳：フラクタルとアトラクター<br></h3>
 <p>かめが歩いた「あしあと」が描く図形、「タートルグラフィックス」を学び、フラクタルとアトラクターを作りました。</p>
 <div class="images">
-  <img src="web/images/img003" />
+  <img src="web/img003" />
 </div>
 
 <!doctype html>
