--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 
 <h3>
 <a id="好きなこと" class="anchor" href="#%E5%A5%BD%E3%81%8D%E3%81%AA%E3%81%93%E3%81%A8" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>好きなこと</h3>
-<img src=”images/larva2.jpg” width=”900” height=”630“ />
-
+ <img src="images/img004.png" />
 <p><FONT color="#ff0000">ぼくは、 本をよむことがすきなので本についての歴史を調べました。</FONT ><br>
 <FONT color="#0000ff">本…西暦８００年頃に、中国で版木にインクをおしつけるすりかたが開発されました.</FONT >
 <FONT color="#008000">そのあと、ドイツ人の、グーテンベルクが、活字印刷を開発しました。</FONT ><br>
